# test_api_payments

./: .gitignore  main.py  pyproject.toml  telegram_bot.py
